--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ body {
   margin: 0;
   min-height: 100vh;
   font-family: Bebas neue, sans-serif;
-  background-color: whitesmoke;
-    
+  background-image: radial-gradient( circle 1224px at 10.6% 8.8%,  rgba(255,255,255,1) 0%, rgba(153,202,251,1) 100.2% );
 }
 
 h1 {
@@ -17,6 +16,7 @@ h1 {
   margin-top: 25px;
   margin-bottom: 15px;
   letter-spacing: 5px;
+  color: white;
 }
 
 .loader {
@@ -37,11 +37,22 @@ h1 {
 
 .image-container {
   margin: 10px 30%;
+  box-shadow: 0 5px 10px 10px rgba(255,255,255,0.6);
+  text-align: center;
+  border-radius: 5px;
 }
 
 .image-container img {
-  width: 100%;
-  margin-top: 5px;
+  width: 95%;
+  margin-top: 20px;
+  transition: all 0.3s;
+  border-radius: 5px;
+  filter: brightness(75%);
+}
+
+img:hover {
+  transform: scale(1.05);
+  filter: brightness(100%);
 }
 
 @media screen and (max-width: 600px) {
